# casual_gaming

./: README.md  pyproject.toml
app/: admin_setup.py  main.py
app/api/: admin.py  auth.py  deps.py  tasks.py
app/core/: config.py
app/db/: base.py  session.py
app/frontend/: index.html
app/models/: task.py  team.py  user.py
app/schemas/: task.py  team.py
app/services/: security.py  tasks.py
tests/: test_task_timing.py
